Tp4/bison.output
Nonterminals useless in grammar

   caracterDeCorte


Terminals unused in grammar

   FLECHA
   INCLUDE
   DO
   FOR
   DEFINE
   POR_IGUAL
   DIVIDIDO_IGUAL


Rules useless in grammar

  218 caracterDeCorte: ';'
  219                | '\n'


Rules useless in parser due to conflicts

   79 lista_de_enumerador: enumerador

   81 enumerador: ID


State 32 conflicts: 23 shift/reduce
State 74 conflicts: 3 reduce/reduce
State 76 conflicts: 1 shift/reduce, 3 reduce/reduce
State 239 conflicts: 3 reduce/reduce
State 244 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: '\n'
    4     | sentenciaDeclaracion '\n'
    5     | unidad_de_traduccion
    6     | NO_RECONOCIDO
    7     | error

    8 $@1: /* empty */

    9 sentenciaDeclaracion: TIPO_DE_DATO $@1 lista_de_enumerador ';'

   10 lista_de_enumerador: enumerador
   11                    | enumerador ',' lista_de_enumerador

   12 enumerador: ID
   13           | ID '=' DECIMAL
   14           | ID '(' listaParametros ')'
   15           | ID '(' listaParametros ')' '{' unidad_de_traduccion '}'

   16 unidad_de_traduccion: declaracion_externa
   17                     | unidad_de_traduccion declaracion_externa

   18 declaracion_externa: definicion_de_funcion
   19                    | declaracion

   20 listaParametros: TIPO_DE_DATO ID
   21                | TIPO_DE_DATO ID ',' listaParametros

   22 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion sentencia_compuesta
   23                      | declarador lista_de_declaracion sentencia_compuesta
   24                      | especificadores_de_declaracion declarador sentencia_compuesta
   25                      | declarador sentencia_compuesta

   26 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   27            | especificadores_de_declaracion ';'

   28 lista_de_declaracion: declaracion
   29                     | lista_de_declaracion declaracion

   30 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   31                               | especificador_categoria_almacenamiento
   32                               | especificador_de_tipo especificadores_de_declaracion
   33                               | especificador_de_tipo
   34                               | calificador_de_tipo especificadores_de_declaracion
   35                               | calificador_de_tipo

   36 especificador_categoria_almacenamiento: AUTO
   37                                       | REGISTER
   38                                       | STATIC
   39                                       | EXTERN
   40                                       | TYPEDEF

   41 especificador_de_tipo: VOID
   42                      | CHAR
   43                      | SHORT
   44                      | INT
   45                      | LONG
   46                      | FLOAT
   47                      | DOUBLE
   48                      | SIGNED
   49                      | UNSIGNED
   50                      | especificador_estructura_union
   51                      | especificador_enum
   52                      | nombre_typedef

   53 calificador_de_tipo: CONST
   54                    | VOLATILE

   55 especificador_estructura_union: estructura_o_union ID '{' lista_declaraciones_struct '}'
   56                               | estructura_o_union '{' lista_declaraciones_struct '}'
   57                               | estructura_o_union ID

   58 estructura_o_union: STRUCT
   59                   | UNION

   60 lista_declaraciones_struct: declaracion_struct
   61                           | lista_declaraciones_struct declaracion_struct

   62 lista_declaradores_init: declarador_init
   63                        | lista_declaradores_init ',' declarador_init

   64 declarador_init: declarador
   65                | declarador '=' inicializador

   66 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   67 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   68                                | especificador_de_tipo
   69                                | calificador_de_tipo lista_calificador_especificador
   70                                | calificador_de_tipo

   71 lista_declaradores_struct: declarador_struct
   72                          | lista_declaradores_struct ',' declarador_struct

   73 declarador_struct: declarador
   74                  | declarador ':' expresion_constante
   75                  | ':' expresion_constante

   76 especificador_enum: ENUM ID '{' lista_de_enumerador '}'
   77                   | ENUM '{' lista_de_enumerador '}'
   78                   | ENUM ID

   79 lista_de_enumerador: enumerador
   80                    | lista_de_enumerador ',' enumerador

   81 enumerador: ID
   82           | ID '=' expresion_constante

   83 declarador: apuntador declarador_directo
   84           | declarador_directo

   85 declarador_directo: ID
   86                   | '(' declarador ')'
   87                   | declarador_directo '[' expresion_constante ']'
   88                   | declarador_directo '[' ']'
   89                   | declarador_directo '(' lista_tipos_de_parametro ')'
   90                   | declarador_directo '(' lista_de_identificadores ')'
   91                   | declarador_directo '(' ')'

   92 apuntador: '*' lista_calificadores_de_tipo
   93          | '*'
   94          | '*' lista_calificadores_de_tipo apuntador
   95          | '*' apuntador

   96 lista_calificadores_de_tipo: calificador_de_tipo
   97                            | lista_calificadores_de_tipo calificador_de_tipo

   98 lista_tipos_de_parametro: lista_de_parametros
   99                         | lista_de_parametros ',' ELIPSIS

  100 lista_de_parametros: declaracion_parametro
  101                    | lista_de_parametros ',' declaracion_parametro

  102 declaracion_parametro: especificadores_de_declaracion declarador
  103                      | especificadores_de_declaracion declarador_abstracto
  104                      | especificadores_de_declaracion

  105 lista_de_identificadores: ID
  106                         | lista_de_identificadores ',' ID

  107 inicializador: expresion_de_asignacion
  108              | '{' lista_de_inicializadores '}'
  109              | '{' lista_de_inicializadores ',' '}'

  110 lista_de_inicializadores: inicializador
  111                         | lista_de_inicializadores ',' inicializador

  112 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
  113               | lista_calificador_especificador

  114 declarador_abstracto: apuntador
  115                     | apuntador declarador_abstracto_directo
  116                     | declarador_abstracto_directo

  117 declarador_abstracto_directo: '(' declarador_abstracto ')'
  118                             | declarador_abstracto_directo '[' expresion_constante ']'
  119                             | '[' expresion_constante ']'
  120                             | declarador_abstracto_directo '[' ']'
  121                             | '[' ']'
  122                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  123                             | declarador_abstracto_directo '(' ')'
  124                             | '(' lista_tipos_de_parametro ')'
  125                             | '(' ')'

  126 nombre_typedef: 't'

  127 sentencia: sentencia_etiquetada
  128          | sentencia_expresion
  129          | sentencia_compuesta
  130          | sentencia_de_seleccion
  131          | sentencia_de_iteracion
  132          | sentencia_de_salto

  133 sentencia_etiquetada: ID ':' sentencia
  134                     | CASE expresion_constante ':' sentencia
  135                     | DEFAULT ':' sentencia

  136 sentencia_expresion: expresion ';'
  137                    | ';'

  138 sentencia_compuesta: '{' lista_de_declaracion lista_de_sentencias '}'
  139                    | '{' lista_de_sentencias '}'
  140                    | '{' lista_de_declaracion '}'
  141                    | '{' '}'

  142 lista_de_sentencias: sentencia
  143                    | lista_de_sentencias sentencia

  144 sentencia_de_seleccion: IF '(' expresion ')' sentencia
  145                       | IF '(' expresion ')' sentencia ELSE sentencia
  146                       | SWITCH '(' expresion ')' sentencia

  147 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  148                       | '(' expresion ';' expresion ';' expresion ')' sentencia
  149                       | '(' ';' expresion ';' expresion ')' sentencia
  150                       | '(' expresion ';' ';' expresion ')' sentencia
  151                       | '(' expresion ';' expresion ';' ')' sentencia
  152                       | '(' ';' ';' expresion ')' sentencia
  153                       | '(' ';' expresion ';' ')' sentencia
  154                       | '(' expresion ';' ';' ')' sentencia
  155                       | '(' ';' ';' ')' sentencia

  156 sentencia_de_salto: BREAK ';'
  157                   | RETURN expresion ';'
  158                   | RETURN ';'

  159 expresion: expresion_de_asignacion
  160          | expresion ',' expresion_de_asignacion

  161 expresion_de_asignacion: expresion_condicional
  162                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  163 operador_de_asignacion: '='
  164                       | MAS_IGUAL
  165                       | MENOS_IGUAL

  166 expresion_condicional: expresion_logica_OR
  167                      | expresion_logica_OR '?' expresion ':' expresion_condicional

  168 expresion_constante: expresion_condicional

  169 expresion_logica_OR: expresion_logica_AND
  170                    | expresion_logica_OR OR expresion_logica_AND

  171 expresion_logica_AND: expresion_OR_inclusivo
  172                     | expresion_logica_AND AND expresion_OR_inclusivo

  173 expresion_OR_inclusivo: expresion_OR_exclusivo
  174                       | expresion_OR_inclusivo '|' expresion_OR_exclusivo

  175 expresion_OR_exclusivo: expresion_AND
  176                       | expresion_OR_exclusivo '^' expresion_AND

  177 expresion_AND: expresion_de_igualdad
  178              | expresion_AND '&' expresion_de_igualdad

  179 expresion_de_igualdad: expresion_relacional
  180                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  181                      | expresion_de_igualdad DISTINTO expresion_relacional

  182 expresion_relacional: expresion_de_corrimiento
  183                     | expresion_relacional '<' expresion_de_corrimiento
  184                     | expresion_relacional '>' expresion_de_corrimiento
  185                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  186                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  187 expresion_de_corrimiento: expresion_aditiva

  188 expresion_aditiva: expresion_multiplicativa
  189                  | expresion_aditiva '+' expresion_multiplicativa
  190                  | expresion_aditiva '-' expresion_multiplicativa

  191 expresion_multiplicativa: expresion_cast
  192                         | expresion_multiplicativa '*' expresion_cast
  193                         | expresion_multiplicativa '/' expresion_cast
  194                         | expresion_multiplicativa '%' expresion_cast

  195 expresion_cast: expresion_unaria
  196               | '(' nombre_de_tipo ')' expresion_cast

  197 expresion_unaria: expresion_posfija
  198                 | MAS_MAS expresion_unaria
  199                 | MENOS_MENOS expresion_unaria
  200                 | operador_unario expresion_cast
  201                 | SIZEOF expresion_unaria
  202                 | SIZEOF '(' nombre_de_tipo ')'

  203 operador_unario: '&' '*' '+' '-' '~' '!'

  204 expresion_posfija: expresion_primaria
  205                  | expresion_posfija '[' expresion ']'
  206                  | expresion_posfija '(' lista_expresiones_argumento ')'
  207                  | expresion_posfija '(' ')'

  208 expresion_primaria: ID
  209                   | constante
  210                   | CADENA
  211                   | '(' expresion ')'

  212 lista_expresiones_argumento: expresion_de_asignacion
  213                            | lista_expresiones_argumento ',' expresion_de_asignacion

  214 constante: OCTAL
  215          | HEXA
  216          | DECIMAL
  217          | CONS_CARACTER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'!' (33) 203
'%' (37) 194
'&' (38) 178 203
'(' (40) 14 15 86 89 90 91 117 122 123 124 125 144 145 146 147 148
    149 150 151 152 153 154 155 196 202 206 207 211
')' (41) 14 15 86 89 90 91 117 122 123 124 125 144 145 146 147 148
    149 150 151 152 153 154 155 196 202 206 207 211
'*' (42) 92 93 94 95 192 203
'+' (43) 189 203
',' (44) 11 21 63 72 80 99 101 106 109 111 160 213
'-' (45) 190 203
'/' (47) 193
':' (58) 74 75 133 134 135 167
';' (59) 9 26 27 66 136 137 148 149 150 151 152 153 154 155 156 157
    158
'<' (60) 183
'=' (61) 13 65 82 163
'>' (62) 184
'?' (63) 167
'[' (91) 87 88 118 119 120 121 205
']' (93) 87 88 118 119 120 121 205
'^' (94) 176
't' (116) 126
'{' (123) 15 55 56 76 77 108 109 138 139 140 141
'|' (124) 174
'}' (125) 15 55 56 76 77 108 109 138 139 140 141
'~' (126) 203
error (256) 7
OCTAL (258) 214
HEXA (259) 215
CONS_CARACTER (260) 217
ID (261) 12 13 14 15 20 21 55 57 76 78 81 82 85 105 106 133 208
FLECHA (262)
MAS_MAS (263) 198
ELIPSIS (264) 99
UNION (265) 59
ENUM (266) 76 77 78
VOLATILE (267) 54
CONST (268) 53
UNSIGNED (269) 49
SIGNED (270) 48
TYPEDEF (271) 40
EXTERN (272) 39
STATIC (273) 38
REGISTER (274) 37
AUTO (275) 36
INCLUDE (276)
DOUBLE (277) 47
SHORT (278) 43
LONG (279) 45
VOID (280) 41
FLOAT (281) 46
INT (282) 44
CHAR (283) 42
DECIMAL (284) 13 216
TIPO_DE_DATO (285) 9 20 21
DO (286)
FOR (287)
SWITCH (288) 146
RETURN (289) 157 158
CASE (290) 134
DEFAULT (291) 135
SIZEOF (292) 201 202
MENOS_MENOS (293) 199
STRUCT (294) 58
DEFINE (295)
IF (296) 144 145
WHILE (297) 147
CADENA (298) 210
DISTINTO (299) 181
BREAK (300) 156
ELSE (301) 145
MAYOR_IGUAL (302) 186
MENOR_IGUAL (303) 185
IGUAL_IGUAL (304) 180
AND (305) 172
OR (306) 170
MAS_IGUAL (307) 164
MENOS_IGUAL (308) 165
POR_IGUAL (309)
DIVIDIDO_IGUAL (310)
NO_RECONOCIDO (311) 6
IFX (312)


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
input (84)
    on left: 1 2, on right: 0 2
line (85)
    on left: 3 4 5 6 7, on right: 2
sentenciaDeclaracion (86)
    on left: 9, on right: 4
$@1 (87)
    on left: 8, on right: 9
lista_de_enumerador (88)
    on left: 10 11 79 80, on right: 9 11 76 77 80
enumerador (89)
    on left: 12 13 14 15 81 82, on right: 10 11 79 80
unidad_de_traduccion (90)
    on left: 16 17, on right: 5 15 17
declaracion_externa (91)
    on left: 18 19, on right: 16 17
listaParametros (92)
    on left: 20 21, on right: 14 15 21
definicion_de_funcion (93)
    on left: 22 23 24 25, on right: 18
declaracion (94)
    on left: 26 27, on right: 19 28 29
lista_de_declaracion (95)
    on left: 28 29, on right: 22 23 29 138 140
especificadores_de_declaracion (96)
    on left: 30 31 32 33 34 35, on right: 22 24 26 27 30 32 34 102
    103 104
especificador_categoria_almacenamiento (97)
    on left: 36 37 38 39 40, on right: 30 31
especificador_de_tipo (98)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52, on right: 32 33 67
    68
calificador_de_tipo (99)
    on left: 53 54, on right: 34 35 69 70 96 97
especificador_estructura_union (100)
    on left: 55 56 57, on right: 50
estructura_o_union (101)
    on left: 58 59, on right: 55 56 57
lista_declaraciones_struct (102)
    on left: 60 61, on right: 55 56 61
lista_declaradores_init (103)
    on left: 62 63, on right: 26 63
declarador_init (104)
    on left: 64 65, on right: 62 63
declaracion_struct (105)
    on left: 66, on right: 60 61
lista_calificador_especificador (106)
    on left: 67 68 69 70, on right: 66 67 69 112 113
lista_declaradores_struct (107)
    on left: 71 72, on right: 66 72
declarador_struct (108)
    on left: 73 74 75, on right: 71 72
especificador_enum (109)
    on left: 76 77 78, on right: 51
declarador (110)
    on left: 83 84, on right: 22 23 24 25 64 65 73 74 86 102
declarador_directo (111)
    on left: 85 86 87 88 89 90 91, on right: 83 84 87 88 89 90 91
apuntador (112)
    on left: 92 93 94 95, on right: 83 94 95 114 115
lista_calificadores_de_tipo (113)
    on left: 96 97, on right: 92 94 97
lista_tipos_de_parametro (114)
    on left: 98 99, on right: 89 122 124
lista_de_parametros (115)
    on left: 100 101, on right: 98 99 101
declaracion_parametro (116)
    on left: 102 103 104, on right: 100 101
lista_de_identificadores (117)
    on left: 105 106, on right: 90 106
inicializador (118)
    on left: 107 108 109, on right: 65 110 111
lista_de_inicializadores (119)
    on left: 110 111, on right: 108 109 111
nombre_de_tipo (120)
    on left: 112 113, on right: 196 202
declarador_abstracto (121)
    on left: 114 115 116, on right: 103 112 117
declarador_abstracto_directo (122)
    on left: 117 118 119 120 121 122 123 124 125, on right: 115 116
    118 120 122 123
nombre_typedef (123)
    on left: 126, on right: 52
sentencia (124)
    on left: 127 128 129 130 131 132, on right: 133 134 135 142 143
    144 145 146 147 148 149 150 151 152 153 154 155
sentencia_etiquetada (125)
    on left: 133 134 135, on right: 127
sentencia_expresion (126)
    on left: 136 137, on right: 128
sentencia_compuesta (127)
    on left: 138 139 140 141, on right: 22 23 24 25 129
lista_de_sentencias (128)
    on left: 142 143, on right: 138 139 143
sentencia_de_seleccion (129)
    on left: 144 145 146, on right: 130
sentencia_de_iteracion (130)
    on left: 147 148 149 150 151 152 153 154 155, on right: 131
sentencia_de_salto (131)
    on left: 156 157 158, on right: 132
expresion (132)
    on left: 159 160, on right: 136 144 145 146 147 148 149 150 151
    152 153 154 157 160 167 205 211
expresion_de_asignacion (133)
    on left: 161 162, on right: 107 159 160 162 212 213
operador_de_asignacion (134)
    on left: 163 164 165, on right: 162
expresion_condicional (135)
    on left: 166 167, on right: 161 167 168
expresion_constante (136)
    on left: 168, on right: 74 75 82 87 118 119 134
expresion_logica_OR (137)
    on left: 169 170, on right: 166 167 170
expresion_logica_AND (138)
    on left: 171 172, on right: 169 170 172
expresion_OR_inclusivo (139)
    on left: 173 174, on right: 171 172 174
expresion_OR_exclusivo (140)
    on left: 175 176, on right: 173 174 176
expresion_AND (141)
    on left: 177 178, on right: 175 176 178
expresion_de_igualdad (142)
    on left: 179 180 181, on right: 177 178 180 181
expresion_relacional (143)
    on left: 182 183 184 185 186, on right: 179 180 181 183 184 185
    186
expresion_de_corrimiento (144)
    on left: 187, on right: 182 183 184 185 186
expresion_aditiva (145)
    on left: 188 189 190, on right: 187 189 190
expresion_multiplicativa (146)
    on left: 191 192 193 194, on right: 188 189 190 192 193 194
expresion_cast (147)
    on left: 195 196, on right: 191 192 193 194 196 200
expresion_unaria (148)
    on left: 197 198 199 200 201 202, on right: 162 195 198 199 201
operador_unario (149)
    on left: 203, on right: 200
expresion_posfija (150)
    on left: 204 205 206 207, on right: 197 205 206 207
expresion_primaria (151)
    on left: 208 209 210 211, on right: 204
lista_expresiones_argumento (152)
    on left: 212 213, on right: 206 213
constante (153)
    on left: 214 215 216 217, on right: 209


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . line

    $end           shift, and go to state 2
    error          shift, and go to state 3
    ID             shift, and go to state 4
    UNION          shift, and go to state 5
    ENUM           shift, and go to state 6
    VOLATILE       shift, and go to state 7
    CONST          shift, and go to state 8
    UNSIGNED       shift, and go to state 9
    SIGNED         shift, and go to state 10
    TYPEDEF        shift, and go to state 11
    EXTERN         shift, and go to state 12
    STATIC         shift, and go to state 13
    REGISTER       shift, and go to state 14
    AUTO           shift, and go to state 15
    DOUBLE         shift, and go to state 16
    SHORT          shift, and go to state 17
    LONG           shift, and go to state 18
    VOID           shift, and go to state 19
    FLOAT          shift, and go to state 20
    INT            shift, and go to state 21
    CHAR           shift, and go to state 22
    TIPO_DE_DATO   shift, and go to state 23
    STRUCT         shift, and go to state 24
    NO_RECONOCIDO  shift, and go to state 25
    '*'            shift, and go to state 26
    '\n'           shift, and go to state 27
    '('            shift, and go to state 28
    't'            shift, and go to state 29

    line                                    go to state 30
    sentenciaDeclaracion                    go to state 31
    unidad_de_traduccion                    go to state 32
    declaracion_externa                     go to state 33
    definicion_de_funcion                   go to state 34
    declaracion                             go to state 35
    especificadores_de_declaracion          go to state 36
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_union          go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    declarador                              go to state 43
    declarador_directo                      go to state 44
    apuntador                               go to state 45
    nombre_typedef                          go to state 46


state 2

    0 $accept: input $end .

    $default  accept


state 3

    7 line: error .

    $default  reduce using rule 7 (line)


state 4

   85 declarador_directo: ID .

    $default  reduce using rule 85 (declarador_directo)


state 5

   59 estructura_o_union: UNION .

    $default  reduce using rule 59 (estructura_o_union)


state 6

   76 especificador_enum: ENUM . ID '{' lista_de_enumerador '}'
   77                   | ENUM . '{' lista_de_enumerador '}'
   78                   | ENUM . ID

    ID   shift, and go to state 47
    '{'  shift, and go to state 48


state 7

   54 calificador_de_tipo: VOLATILE .

    $default  reduce using rule 54 (calificador_de_tipo)


state 8

   53 calificador_de_tipo: CONST .

    $default  reduce using rule 53 (calificador_de_tipo)


state 9

   49 especificador_de_tipo: UNSIGNED .

    $default  reduce using rule 49 (especificador_de_tipo)


state 10

   48 especificador_de_tipo: SIGNED .

    $default  reduce using rule 48 (especificador_de_tipo)


state 11

   40 especificador_categoria_almacenamiento: TYPEDEF .

    $default  reduce using rule 40 (especificador_categoria_almacenamiento)


state 12

   39 especificador_categoria_almacenamiento: EXTERN .

    $default  reduce using rule 39 (especificador_categoria_almacenamiento)


state 13

   38 especificador_categoria_almacenamiento: STATIC .

    $default  reduce using rule 38 (especificador_categoria_almacenamiento)


state 14

   37 especificador_categoria_almacenamiento: REGISTER .

    $default  reduce using rule 37 (especificador_categoria_almacenamiento)


state 15

   36 especificador_categoria_almacenamiento: AUTO .

    $default  reduce using rule 36 (especificador_categoria_almacenamiento)


state 16

   47 especificador_de_tipo: DOUBLE .

    $default  reduce using rule 47 (especificador_de_tipo)


state 17

   43 especificador_de_tipo: SHORT .

    $default  reduce using rule 43 (especificador_de_tipo)


state 18

   45 especificador_de_tipo: LONG .

    $default  reduce using rule 45 (especificador_de_tipo)


state 19

   41 especificador_de_tipo: VOID .

    $default  reduce using rule 41 (especificador_de_tipo)


state 20

   46 especificador_de_tipo: FLOAT .

    $default  reduce using rule 46 (especificador_de_tipo)


state 21

   44 especificador_de_tipo: INT .

    $default  reduce using rule 44 (especificador_de_tipo)


state 22

   42 especificador_de_tipo: CHAR .

    $default  reduce using rule 42 (especificador_de_tipo)


state 23

    9 sentenciaDeclaracion: TIPO_DE_DATO . $@1 lista_de_enumerador ';'

    $default  reduce using rule 8 ($@1)

    $@1  go to state 49


state 24

   58 estructura_o_union: STRUCT .

    $default  reduce using rule 58 (estructura_o_union)


state 25

    6 line: NO_RECONOCIDO .

    $default  reduce using rule 6 (line)


state 26

   92 apuntador: '*' . lista_calificadores_de_tipo
   93          | '*' .
   94          | '*' . lista_calificadores_de_tipo apuntador
   95          | '*' . apuntador

    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 8
    '*'       shift, and go to state 26

    $default  reduce using rule 93 (apuntador)

    calificador_de_tipo          go to state 50
    apuntador                    go to state 51
    lista_calificadores_de_tipo  go to state 52


state 27

    3 line: '\n' .

    $default  reduce using rule 3 (line)


state 28

   86 declarador_directo: '(' . declarador ')'

    ID   shift, and go to state 4
    '*'  shift, and go to state 26
    '('  shift, and go to state 28

    declarador          go to state 53
    declarador_directo  go to state 44
    apuntador           go to state 45


state 29

  126 nombre_typedef: 't' .

    $default  reduce using rule 126 (nombre_typedef)


state 30

    2 input: input line .

    $default  reduce using rule 2 (input)


state 31

    4 line: sentenciaDeclaracion . '\n'

    '\n'  shift, and go to state 54


state 32

    5 line: unidad_de_traduccion .
   17 unidad_de_traduccion: unidad_de_traduccion . declaracion_externa

    ID        shift, and go to state 4
    UNION     shift, and go to state 5
    ENUM      shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    SIGNED    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    EXTERN    shift, and go to state 12
    STATIC    shift, and go to state 13
    REGISTER  shift, and go to state 14
    AUTO      shift, and go to state 15
    DOUBLE    shift, and go to state 16
    SHORT     shift, and go to state 17
    LONG      shift, and go to state 18
    VOID      shift, and go to state 19
    FLOAT     shift, and go to state 20
    INT       shift, and go to state 21
    CHAR      shift, and go to state 22
    STRUCT    shift, and go to state 24
    '*'       shift, and go to state 26
    '('       shift, and go to state 28
    't'       shift, and go to state 29

    ID        [reduce using rule 5 (line)]
    UNION     [reduce using rule 5 (line)]
    ENUM      [reduce using rule 5 (line)]
    VOLATILE  [reduce using rule 5 (line)]
    CONST     [reduce using rule 5 (line)]
    UNSIGNED  [reduce using rule 5 (line)]
    SIGNED    [reduce using rule 5 (line)]
    TYPEDEF   [reduce using rule 5 (line)]
    EXTERN    [reduce using rule 5 (line)]
    STATIC    [reduce using rule 5 (line)]
    REGISTER  [reduce using rule 5 (line)]
    AUTO      [reduce using rule 5 (line)]
    DOUBLE    [reduce using rule 5 (line)]
    SHORT     [reduce using rule 5 (line)]
    LONG      [reduce using rule 5 (line)]
    VOID      [reduce using rule 5 (line)]
    FLOAT     [reduce using rule 5 (line)]
    INT       [reduce using rule 5 (line)]
    CHAR      [reduce using rule 5 (line)]
    STRUCT    [reduce using rule 5 (line)]
    '*'       [reduce using rule 5 (line)]
    '('       [reduce using rule 5 (line)]
    't'       [reduce using rule 5 (line)]
    $default  reduce using rule 5 (line)

    declaracion_externa                     go to state 55
    definicion_de_funcion                   go to state 34
    declaracion                             go to state 35
    especificadores_de_declaracion          go to state 36
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_union          go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    declarador                              go to state 43
    declarador_directo                      go to state 44
    apuntador                               go to state 45
    nombre_typedef                          go to state 46


state 33

   16 unidad_de_traduccion: declaracion_externa .

    $default  reduce using rule 16 (unidad_de_traduccion)


state 34

   18 declaracion_externa: definicion_de_funcion .

    $default  reduce using rule 18 (declaracion_externa)


state 35

   19 declaracion_externa: declaracion .

    $default  reduce using rule 19 (declaracion_externa)


state 36

   22 definicion_de_funcion: especificadores_de_declaracion . declarador lista_de_declaracion sentencia_compuesta
   24                      | especificadores_de_declaracion . declarador sentencia_compuesta
   26 declaracion: especificadores_de_declaracion . lista_declaradores_init ';'
   27            | especificadores_de_declaracion . ';'

    ID   shift, and go to state 4
    '*'  shift, and go to state 26
    ';'  shift, and go to state 56
    '('  shift, and go to state 28

    lista_declaradores_init  go to state 57
    declarador_init          go to state 58
    declarador               go to state 59
    declarador_directo       go to state 44
    apuntador                go to state 45


state 37

   30 especificadores_de_declaracion: especificador_categoria_almacenamiento . especificadores_de_declaracion
   31                               | especificador_categoria_almacenamiento .

    UNION     shift, and go to state 5
    ENUM      shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    SIGNED    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    EXTERN    shift, and go to state 12
    STATIC    shift, and go to state 13
    REGISTER  shift, and go to state 14
    AUTO      shift, and go to state 15
    DOUBLE    shift, and go to state 16
    SHORT     shift, and go to state 17
    LONG      shift, and go to state 18
    VOID      shift, and go to state 19
    FLOAT     shift, and go to state 20
    INT       shift, and go to state 21
    CHAR      shift, and go to state 22
    STRUCT    shift, and go to state 24
    't'       shift, and go to state 29

    $default  reduce using rule 31 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 60
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_union          go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    nombre_typedef                          go to state 46


state 38

   32 especificadores_de_declaracion: especificador_de_tipo . especificadores_de_declaracion
   33                               | especificador_de_tipo .

    UNION     shift, and go to state 5
    ENUM      shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    SIGNED    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    EXTERN    shift, and go to state 12
    STATIC    shift, and go to state 13
    REGISTER  shift, and go to state 14
    AUTO      shift, and go to state 15
    DOUBLE    shift, and go to state 16
    SHORT     shift, and go to state 17
    LONG      shift, and go to state 18
    VOID      shift, and go to state 19
    FLOAT     shift, and go to state 20
    INT       shift, and go to state 21
    CHAR      shift, and go to state 22
    STRUCT    shift, and go to state 24
    't'       shift, and go to state 29

    $default  reduce using rule 33 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 61
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_union          go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    nombre_typedef                          go to state 46


state 39

   34 especificadores_de_declaracion: calificador_de_tipo . especificadores_de_declaracion
   35                               | calificador_de_tipo .

    UNION     shift, and go to state 5
    ENUM      shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    SIGNED    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    EXTERN    shift, and go to state 12
    STATIC    shift, and go to state 13
    REGISTER  shift, and go to state 14
    AUTO      shift, and go to state 15
    DOUBLE    shift, and go to state 16
    SHORT     shift, and go to state 17
    LONG      shift, and go to state 18
    VOID      shift, and go to state 19
    FLOAT     shift, and go to state 20
    INT       shift, and go to state 21
    CHAR      shift, and go to state 22
    STRUCT    shift, and go to state 24
    't'       shift, and go to state 29

    $default  reduce using rule 35 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 62
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_union          go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    nombre_typedef                          go to state 46


state 40

   50 especificador_de_tipo: especificador_estructura_union .

    $default  reduce using rule 50 (especificador_de_tipo)


state 41

   55 especificador_estructura_union: estructura_o_union . ID '{' lista_declaraciones_struct '}'
   56                               | estructura_o_union . '{' lista_declaraciones_struct '}'
   57                               | estructura_o_union . ID

    ID   shift, and go to state 63
    '{'  shift, and go to state 64


state 42

   51 especificador_de_tipo: especificador_enum .

    $default  reduce using rule 51 (especificador_de_tipo)


state 43

   23 definicion_de_funcion: declarador . lista_de_declaracion sentencia_compuesta
   25                      | declarador . sentencia_compuesta

    UNION     shift, and go to state 5
    ENUM      shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    SIGNED    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    EXTERN    shift, and go to state 12
    STATIC    shift, and go to state 13
    REGISTER  shift, and go to state 14
    AUTO      shift, and go to state 15
    DOUBLE    shift, and go to state 16
    SHORT     shift, and go to state 17
    LONG      shift, and go to state 18
    VOID      shift, and go to state 19
    FLOAT     shift, and go to state 20
    INT       shift, and go to state 21
    CHAR      shift, and go to state 22
    STRUCT    shift, and go to state 24
    '{'       shift, and go to state 65
    't'       shift, and go to state 29

    declaracion                             go to state 66
    lista_de_declaracion                    go to state 67
    especificadores_de_declaracion          go to state 68
    especificador_categoria_almacenamiento  go to state 37
    especificador_de_tipo                   go to state 38
    calificador_de_tipo                     go to state 39
    especificador_estructura_union          go to state 40
    estructura_o_union                      go to state 41
    especificador_enum                      go to state 42
    nombre_typedef                          go to state 46
